Post: Compilação do Spark 1.5 (com bugfix)